# vallumix

./: .gitignore  .tarpaulin.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.lock.bak  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  Vagrantfile  deny.toml  documentation-prompt.md  vallumix.prd
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_control.yml
.github/workflows/: audit-schedule.yml  ci.yml  deny-schedule.yml  docs.yml  release.yml  slsa-release.yml
crates/vallumix-backup/: Cargo.toml
crates/vallumix-backup/src/: lib.rs
crates/vallumix-cli/: Cargo.toml  build.rs
crates/vallumix-cli/src/: cli.rs  main.rs
crates/vallumix-cli/src/commands/: apply.rs  audit.rs  completion.rs  list.rs  mod.rs  rollback.rs
crates/vallumix-cli/tests/: cli.rs
crates/vallumix-controls/: Cargo.toml
crates/vallumix-controls/src/: lib.rs
crates/vallumix-controls/src/auth/: common.rs  mod.rs
crates/vallumix-controls/src/filesystem/: disable_cramfs.rs  disable_freevxfs.rs  disable_hfs.rs  disable_hfsplus.rs  disable_jffs2.rs  disable_squashfs.rs  disable_udf.rs  disable_usb_storage.rs  harden_tmpfs.rs  mod.rs
crates/vallumix-controls/src/logging/: common.rs  mod.rs
crates/vallumix-controls/src/maintenance/: common.rs  ensure_perms_passwd.rs  mod.rs
crates/vallumix-controls/src/network/: common.rs  configure_firewalld.rs  mod.rs  sysctl_ip_forwarding.rs
crates/vallumix-controls/src/services/: common.rs  disable_avahi.rs  mod.rs
crates/vallumix-controls/src/ssh/: common.rs  disable_root_login.rs  mod.rs  ssh_limit_access.rs  ssh_set_banner.rs
crates/vallumix-controls/tests/fixtures/: filesystems_no_cramfs  filesystems_with_cramfs  sshd_root_no  sshd_root_yes
crates/vallumix-core/: Cargo.toml
crates/vallumix-core/src/: context.rs  control.rs  distro.rs  error.rs  lib.rs  profile.rs
crates/vallumix-reporters/: Cargo.toml
crates/vallumix-reporters/src/: html.rs  json.rs  junit.rs  lib.rs  text.rs
crates/vallumix-reporters/src/snapshots/: vallumix_reporters__html__tests__html_reporter_snapshot.snap.new  vallumix_reporters__json__tests__json_reporter_snapshot.snap.new  vallumix_reporters__junit__tests__junit_reporter_snapshot.snap
crates/vallumix-reporters/src/snapshots/html.rs/: html_reporter_snapshot.snap
crates/vallumix-reporters/src/snapshots/json.rs/: json_reporter_snapshot.snap
crates/vallumix-reporters/src/snapshots/junit.rs/: junit_reporter_snapshot.snap
crates/vallumix-reporters/src/snapshots/text.rs/: text_reporter_snapshot.snap
crates/vallumix-reporters/templates/: report.html
docs/en/: book.toml
docs/en/src/: README.md  SUMMARY.md  api-reference.md  cis-mapping.md  cli-reference.md  contributing.md  faq.md  getting-started.md  glossary.md  installation.md  introduction.md  profiles.md  quick-start.md  troubleshooting.md
docs/en/src/concepts/: README.md  controls.md  idempotency.md  profiles.md  rollback.md
docs/en/src/controls/: README.md  access-auth.md  filesystem.md  logging-audit.md  network.md  services.md  system-maintenance.md
docs/en/src/guides/: README.md  ci-cd-integration.md  compliance-audit.md  dry-run-validation.md  hardening-web-server.md  rollback-after-incident.md
docs/en/src/installation/: README.md  debian-ubuntu.md  from-source.md  rhel-derivatives.md
docs/en/src/reference/: README.md  apply.md  audit.md  cli.md  completion.md  list.md  rollback.md
docs/en/src/reports/: README.md  html.md  json.md  junit.md  text.md
docs/es/: book.toml
docs/es/src/: README.md  SUMMARY.md  api-reference.md  cis-mapping.md  cli-reference.md  contributing.md  faq.md  getting-started.md  glossary.md  installation.md  introduction.md  profiles.md  quick-start.md  troubleshooting.md
docs/es/src/concepts/: README.md  controls.md  idempotency.md  profiles.md  rollback.md
docs/es/src/controls/: README.md  access-auth.md  filesystem.md  logging-audit.md  network.md  services.md  system-maintenance.md
docs/es/src/guides/: README.md  ci-cd-integration.md  compliance-audit.md  dry-run-validation.md  hardening-web-server.md  rollback-after-incident.md
docs/es/src/installation/: README.md  debian-ubuntu.md  from-source.md  rhel-derivatives.md
docs/es/src/reference/: README.md  apply.md  audit.md  cli.md  completion.md  list.md  rollback.md
docs/es/src/reports/: README.md  html.md  json.md  junit.md  text.md
examples/packer/: README.md  vallumix-hardened.pkr.hcl
openspec/: config.yaml
openspec/changes/archive/2026-04-30-phase0-bootstrap/: archive-report.md  design.md  explore.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-04-30-phase1-foundations/: archive-report.md  design.md  explore.md  tasks.md  (+2 more)
openspec/changes/phase3-quality/: tasks.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/cli-orchestration/: spec.md
openspec/specs/cli-structure/: spec.md
openspec/specs/controls-auth/: spec.md
openspec/specs/controls-filesystem/: spec.md
openspec/specs/controls-logging/: spec.md
openspec/specs/controls-maintenance/: spec.md
openspec/specs/controls-ssh/: spec.md
openspec/specs/core-traits/: spec.md
openspec/specs/deb-rpm-packages/: spec.md
openspec/specs/distro-detection/: spec.md
openspec/specs/error-types/: spec.md
openspec/specs/execution-context/: spec.md
openspec/specs/json-reporter/: spec.md
openspec/specs/man-page/: spec.md
openspec/specs/mdbook-docs/: spec.md
openspec/specs/packer-example/: spec.md
openspec/specs/pilot-controls/: spec.md
openspec/specs/profile-model/: spec.md
openspec/specs/repo-metadata-fix/: spec.md
openspec/specs/reporter-html/: spec.md
openspec/specs/reporter-junit/: spec.md
openspec/specs/reporter-text/: spec.md
openspec/specs/web-profile/: spec.md
openspec/specs/workspace-bootstrap/: spec.md
profiles/: bastion.toml  database.toml  web.toml
scripts/: provision-debian.sh  provision-rocky.sh  provision-ubuntu.sh
sdd/phase4-polish/: verify-report.md
tests/: phase5-launch-verify.sh
(+48 files in other folders)
