[package]
name = "vallumix-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vallumix"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
owo-colors = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true }
vallumix-core = { workspace = true }
vallumix-controls = { workspace = true }
vallumix-reporters = { workspace = true }
vallumix-backup = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }
clap_complete = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
