[package]
name = "vallumix-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Vallumix CLI — CIS Linux hardening tool"
readme = "README.md"
keywords = ["cis", "linux", "hardening", "compliance", "security"]
categories = ["command-line-utilities"]

[[bin]]
name = "vallumix"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
owo-colors = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true, features = ["user"] }
vallumix-core = { workspace = true }
vallumix-controls = { workspace = true }
vallumix-reporters = { workspace = true }
vallumix-backup = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }
clap_complete = { workspace = true }
chrono = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap_mangen = { workspace = true }
clap_complete = { workspace = true }

[package.metadata.deb]
maintainer = "Vallumix Contributors <vallumix@example.com>"
section = "admin"
priority = "optional"
depends = "libc6"
assets = [
    ["target/release/vallumix", "usr/bin/vallumix", "755"],
    ["../../man/vallumix.1", "usr/share/man/man1/vallumix.1", "644"],
    ["target/release/completions/vallumix.bash", "usr/share/bash-completion/completions/vallumix", "644"],
    ["target/release/completions/_vallumix", "usr/share/zsh/vendor-completions/_vallumix", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/vallumix", dest = "/usr/bin/vallumix", mode = "755" },
    { source = "../../man/vallumix.1", dest = "/usr/share/man/man1/vallumix.1", mode = "644" },
]
auto-req = "no"
license = "MIT OR Apache-2.0"
