[package]
name = "vallumix-controls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CIS control implementations for Vallumix hardening toolkit"
publish = false

[dependencies]
vallumix-core = { workspace = true }
nix = { workspace = true }
walkdir = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
