[package]
name = "vallumix-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
nix = { workspace = true, features = ["hostname"] }

[dev-dependencies]
tempfile = { workspace = true }
