[package]
name = "vallumix-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core traits and types for Vallumix CIS hardening toolkit"
publish = false

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
nix = { workspace = true, features = ["hostname"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tempfile = { workspace = true }
