[package]
name = "vallumix-reporters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vallumix-core = { workspace = true }
serde_json = { workspace = true }
askama = { workspace = true }
quick-xml = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }

[dev-dependencies]
insta = { workspace = true }
